# CAGD-Bezier-Curve-Visualization

./: CMakeLists.txt  README.md  circle.cpp  index.html  main.cpp
.github/workflows/: pages.yml
assets/: index-B0QneLvZ.js  index-B9GahNDi.css  index-BwYocZCy.css  index-CbY2xZ8C.js  index-D7zFLOjc.css  index-DojTLGQI.css  index-Z9rmNsub.css  index-ZvOe-_vb.js
native/: CMakeLists.txt  bezier.cpp  bezier.hpp  circle  circle_complexity.cpp  grid.cpp  grid.hpp  main.cpp  parabola.cpp  parabola.hpp
web/: index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
web/src/: main.ts
web/src/math/: bezier.ts  vec2.ts
web/src/modes/: bezier_editor.ts  pen_tool.ts
web/src/render/: canvas.ts
